syntax = "proto3";
package flipcash.iap.v1;
option go_package = "github.com/code-payments/flipcash-protobuf-api/generated/go/iap/v1;iappb";
option java_package = "com.codeinc.flipcash.gen.iap.v1";
option objc_class_prefix = "FPBIapV1";
import "common/v1/common.proto";
service Iap {
    // OnPurchaseCompleted is called when an IAP has been completed
    rpc OnPurchaseCompleted(OnPurchaseCompletedRequest) returns (OnPurchaseCompletedResponse);
}
message OnPurchaseCompletedRequest {
    common.v1.Platform platform = 1;
    Receipt receipt = 2;
    common.v1.Auth auth = 3;
}
message OnPurchaseCompletedResponse {
    Result result = 1;
    enum Result {
        OK              = 0;
        DENIED          = 1;
        INVALID_RECEIPT = 2; // Returned if the receipt is invalid, or not in a completed payment state
    }
}
message Receipt {
    string value = 1 ;
}
